k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-guest-lecture
  namespace: hu
spec:
  selector:
    app: k8s-guest-lecture
  ports:
    - port: 80
      targetPort: 80
---
